[project]
name = "image-search-engine"
version = "0.1.0"
description = "A simple image search engine using Qdrant and Sentence Transformers."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "einops>=0.8.2",
    "flask>=3.1.3",
    "pillow>=12.2.0",
    "qdrant-client>=1.18.0",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
    "timm>=1.0.27",
    "torch>=2.12.0",
    "transformers>=5.9.0",
]

[tool.uv.sources]
torch = {index = 'torch_cuda121'}
torchvision = {index = 'torch_cuda121'}

[[tool.uv.index]]
name = 'torch_cuda121'
url = "https://download.pytorch.org/whl/cu121"
explicit = true
